Check if webpage updates

--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Körda kilometer\n",
+    "# Körda kilometer med bilen\n",
     "Antal körda kilometer jämfört med vad som gäller i leasingavtalet. Sista datumet i grafen är 2 veckor efter senaste uppdateringen."
    ]
   },
@@ -92,20 +92,13 @@
    "source": [
     "md(f\"Uppdaterad {pd.datetime.today().strftime('%Y-%m-%d')}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.0 64-bit ('3.8.0': pyenv)",
    "language": "python",
-   "name": "python3"
+   "name": "python38064bit380pyenv663c04aa123640ccb340a8745709dbbc"
   },
   "language_info": {
    "codemirror_mode": {
