Lägg till prognos

--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -62,29 +62,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "current_km = int(df.tail(1)['Sträcka i km'])\n",
     "remaining_km = int(max_distance_today / 1000 - current_km)\n",
     "current_avg = int(current_km / days_driven)\n",
-    "max_avg = int(max_annual_distance / 1000 / 365)"
+    "max_avg = int(max_annual_distance / 1000 / 365)\n",
+    "prognosis = int(current_avg * 365)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "\n# Körda kilometer sedan 29 maj 2020\n\nDen **2020-07-14** har vi kört **1404 km** och har **486 km** i utrymme till maximala km.\n\nVi har kört i snitt **30 km** per dag och kan köra i snitt **41 km** per dag.\n"
+      "text/markdown": "\n# Körda kilometer sedan 29 maj 2020\n\nDen **2020-07-14** har vi kört **1404 km** och har **486 km** i utrymme till maximala km.\n\nVi har kört i snitt **30 km** per dag och kan köra i snitt **41 km** per dag. Med nuvarande snitt kommer vi att hamna på **10950 km** efter ett år.\n"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 11
     }
    ],
    "source": [
@@ -93,7 +94,7 @@
     "\n",
     "Den **{dt.datetime.today().strftime('%Y-%m-%d')}** har vi kört **{current_km} km** och har **{remaining_km} km** i utrymme till maximala km.\n",
     "\n",
-    "Vi har kört i snitt **{current_avg} km** per dag och kan köra i snitt **{max_avg} km** per dag.\n",
+    "Vi har kört i snitt **{current_avg} km** per dag och kan köra i snitt **{max_avg} km** per dag. Med nuvarande snitt kommer vi att hamna på **{prognosis} km** efter ett år.\n",
     "\"\"\")"
    ]
   },
