Formattera siffrorna i texten
Använd flyttalsformattering för tusentalsseparator och decimaler.
Det blir engelsk notation (, för tusental och . för decimal), orkar
inte gräva i hur man får till det på svenska.

Ett alternativ är att ha `_` som separator, men det är ännu fulare.

https://docs.python.org/3/library/string.html#grammar-token-grouping-option

--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "46"
-     },
-     "metadata": {},
-     "execution_count": 1
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%load_ext lab_black\n",
     "import pandas as pd\n",
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,39 +53,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_km = int(df.tail(1)['Sträcka i km'])\n",
-    "remaining_km = int(max_distance_today / 1000 - current_km)\n",
-    "current_avg = int(current_km / days_driven)\n",
-    "max_avg = int(max_annual_distance / 1000 / 365)\n",
-    "prognosis = int(current_avg * 365)"
+    "current = float(df.tail(1)['Sträcka i km'])\n",
+    "remaining = max_distance_today / 1000 - current\n",
+    "current_avg = current / days_driven\n",
+    "max_avg = max_annual_distance / 1000 / 365\n",
+    "prognosis = current_avg * 365"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "\n# Körda kilometer sedan 29 maj 2020\n\nDen **2020-07-14** har vi kört **1404 km** och har **486 km** i utrymme till maximala km.\n\nVi har kört i snitt **30 km** per dag och kan köra i snitt **41 km** per dag. Med nuvarande snitt kommer vi att hamna på **10950 km** efter ett år.\n"
+      "text/markdown": "\n# Körda kilometer sedan 29 maj 2020\n\nDen **2020-07-14** har vi kört **1,404 km** och har **486 km** i utrymme till maximala km.\n\nVi har kört i snitt **30.5 km** per dag och kan köra i snitt **41.1 km** per dag. Med nuvarande snitt kommer vi att hamna på **11,143 km** efter ett år.\n"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 39
     }
    ],
    "source": [
     "md(f\"\"\"\n",
     "# Körda kilometer sedan 29 maj 2020\n",
     "\n",
-    "Den **{dt.datetime.today().strftime('%Y-%m-%d')}** har vi kört **{current_km} km** och har **{remaining_km} km** i utrymme till maximala km.\n",
+    "Den **{dt.datetime.today().strftime('%Y-%m-%d')}** har vi kört **{current:,.0f} km** och har **{remaining:,.0f} km** i utrymme till maximala km.\n",
     "\n",
-    "Vi har kört i snitt **{current_avg} km** per dag och kan köra i snitt **{max_avg} km** per dag. Med nuvarande snitt kommer vi att hamna på **{prognosis} km** efter ett år.\n",
+    "Vi har kört i snitt **{current_avg:.1f} km** per dag och kan köra i snitt **{max_avg:.1f} km** per dag. Med nuvarande snitt kommer vi att hamna på **{prognosis:,.0f} km** efter ett år.\n",
     "\"\"\")"
    ]
   },
