--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -73,7 +73,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "\n# Körda kilometer sedan 29 maj 2020\n\nDen **2020-07-14** har vi kört **1,404 km** och har **486 km** i utrymme till maximala km.\n\nVi har kört i snitt **30.5 km** per dag och kan köra i snitt **41.1 km** per dag. Med nuvarande snitt kommer vi att hamna på **11,143 km** efter ett år.\n"
+      "text/markdown": "\n# Körda kilometer sedan 1 juni 2020\n\nDen **2020-07-14** har vi kört **1,404 km** och har **486 km** i utrymme till maximala km.\n\nVi har kört i snitt **30.5 km** per dag och kan köra i snitt **41.1 km** per dag. Med nuvarande snitt kommer vi att hamna på **11,143 km** efter ett år.\n"
      },
      "metadata": {},
      "execution_count": 39
