--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -15,7 +15,7 @@
     "max_annual_distance = 15_000_000\n",
     "csv_file = \"odometer.csv\"\n",
     "# Dates to show in graph\n",
-    "start_date = \"2020-05-29\"\n",
+    "start_date = \"2020-06-01\"\n",
     "end_date = dt.datetime.today().isoformat()\n",
     "days_driven = (dt.datetime.today() - pd.to_datetime(start_date)).days\n",
     "target_distance = (\n",
@@ -81,7 +81,7 @@
    ],
    "source": [
     "md(f\"\"\"\n",
-    "# Körda kilometer sedan 29 maj 2020\n",
+    "# Körda kilometer sedan 1 juni 2020\n",
     "\n",
     "Den **{dt.datetime.today().strftime('%Y-%m-%d')}** har vi kört **{current:,.0f} km** och har **{remaining:,.0f} km** i utrymme till maximala km.\n",
     "\n",
