Comment out lab black and IPCompleter

--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -15,9 +15,17 @@
     }
    ],
    "source": [
-    "%load_ext lab_black\n",
-    "%config IPCompleter.greedy=True\n",
-    "\n",
+    "# Useful when running in a Jupyter notebook. Does not work in VS Code or with nbconvert\n",
+    "#%load_ext lab_black\n",
+    "#%config IPCompleter.greedy=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import altair as alt\n",
     "import datetime as dt\n",
