Comment lab_black, it breaks GitHub action

--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# Useful when running in a Jupyter notebook. Does not work in VS Code or with nbconvert\n",
-    "%load_ext lab_black\n",
+    "#%load_ext lab_black\n",
     "#%config IPCompleter.greedy=True"
    ]
   },
