--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -148,7 +148,7 @@
     "    title=(\n",
     "        {\n",
     "            \"text\": \"Körda kilometer sedan 1 juni 2020\",\n",
-    "            \"subtitle\": f'I dag, {dt.datetime.today().strftime(\"%Y-%m-%d\")}, har vi {remaining:,.0f} km kvar att köra till max utrymme. Med nuvarande snitt kommer vi att hamna på {prognosis:,.0f} km 1 juni 2021.',\n",
+    "            \"subtitle\": f'I dag, {dt.datetime.today().strftime(\"%Y-%m-%d\")}, har vi {remaining:,.0f} km kvar att köra till max utrymme.',\n",
     "        }\n",
     "    ),\n",
     "    width=600,\n",
